Update and rename cubo.html to launcher_JogoAMII.html

--- a/launcher_JogoAMII.html
+++ b/launcher_JogoAMII.html
@@ -100,9 +100,9 @@
 
             this.passBy = function(otherobj2) {
                 var myleft = this.x;
-                var myright = this.x + (this.width);
+                var myright = this.x + 3;
                 var otherleft = otherobj2.x;
-                var otherright = otherobj2.x + (otherobj2.width);
+                var otherright = otherobj2.x + 3;
                 var canPass = true;
                 var pass = true;               
 
